[package]
name = "polk"
version = "1.1.3"
authors = ["Dylan McKay <me@dylanmckay.io>"]

description = "Dotfile manager and symlinker"

documentation = "https://docs.rs/polk"
repository = "https://github.com/dylanmckay/polk"

readme = "README.md"
categories = ["config", "development-tools"]

license = "MIT"

[dependencies]
clap = "2.31"
git2 = "0.7"
regex = "1.0"
lazy_static = "1.0"
walkdir = "2.1"
term = "0.5"
toml = "0.4"
serde = "1.0"
serde_derive = "1.0"
error-chain = "0.11"
rand = "0.5"
symlink = "0.1"

