[package]
name = "polk"
version = "1.1.4"
authors = ["Dylan McKay <me@dylanmckay.io>"]

description = "Dotfile manager and symlinker"

documentation = "https://docs.rs/polk"
repository = "https://github.com/dylanmckay/polk"

readme = "README.md"
categories = ["config", "development-tools"]

license = "MIT"

[dependencies]
clap = "4.4"
git2 = "0.18"
regex = "1.10"
lazy_static = "1.4"
walkdir = "2.4"
term = "0.7"
toml = "0.8"
serde = "1.0"
serde_derive = "1.0"
error-chain = "0.12"
rand = "0.8"
symlink = "0.1"

